[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/character/tabs/AbilityScoreTab.gd" id="1_0"]
[ext_resource type="Theme" path="res://themes/bg3_theme.tres" id="2_0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_25"]
bg_color = Color(0.0784314, 0.0941176, 0.113725, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.843137, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_26"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 2
border_color = Color(1, 0.843137, 0, 0.5)

[node name="AbilityScoreTab" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0")

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleMargin" type="MarginContainer" parent="MainPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 0.0
anchor_bottom = 0.0
anchor_left = 0.0
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 0
offset_bottom = 80.0
custom_minimum_size = Vector2(0, 80)
size_flags_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="TitleLabel" type="Label" parent="MainPanel/TitleMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 64
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "CHOOSE YOUR ABILITY SCORES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainLayout" type="HBoxContainer" parent="MainPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_top = 0.0
anchor_left = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_top = 80.0
offset_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="LeftSpacer" type="Control" parent="MainPanel/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UnifiedScroll" type="ScrollContainer" parent="MainPanel/MainLayout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
follow_focus = false

[node name="ContentMargin" type="MarginContainer" parent="MainPanel/MainLayout/UnifiedScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ScrollableColumns" type="HBoxContainer" parent="MainPanel/MainLayout/UnifiedScroll/ContentMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 30

[node name="LeftColumn" type="VBoxContainer" parent="MainPanel/MainLayout/UnifiedScroll/ContentMargin/ScrollableColumns"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 40

[node name="RightColumn" type="VBoxContainer" parent="MainPanel/MainLayout/UnifiedScroll/ContentMargin/ScrollableColumns"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 40

[node name="PreviewPanel" type="PanelContainer" parent="MainPanel/MainLayout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
custom_minimum_size = Vector2(420, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_25")

[node name="RightSpacer" type="Control" parent="MainPanel/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PreviewMargin" type="MarginContainer" parent="MainPanel/MainLayout/PreviewPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PreviewVBox" type="VBoxContainer" parent="MainPanel/MainLayout/PreviewPanel/PreviewMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 0

[node name="TotalSpentLabel" type="Label" parent="MainPanel/MainLayout/PreviewPanel/PreviewMargin/PreviewVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "Total Points Spent: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RemainingLabel" type="Label" parent="MainPanel/MainLayout/PreviewPanel/PreviewMargin/PreviewVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "Points Remaining: 27"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PreviewSeparator" type="HSeparator" parent="MainPanel/MainLayout/PreviewPanel/PreviewMargin/PreviewVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_26")

[node name="SpentBreakdown" type="VBoxContainer" parent="MainPanel/MainLayout/PreviewPanel/PreviewMargin/PreviewVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ConfirmButtonWrapper" type="MarginContainer" parent="MainPanel/MainLayout/PreviewPanel/PreviewMargin/PreviewVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 40

[node name="ConfirmAbilityButton" type="Button" parent="MainPanel/MainLayout/PreviewPanel/PreviewMargin/PreviewVBox/ConfirmButtonWrapper"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(320, 80)
theme = ExtResource("2_0")
text = "Confirm Ability Scores"
disabled = true

[node name="BackButton" type="Button" parent="MainPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
offset_left = 40.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -20.0
custom_minimum_size = Vector2(160, 80)
theme = ExtResource("2_0")
text = "‚Üê Back"
visible = false

[connection signal="pressed" from="MainPanel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MainPanel/MainLayout/PreviewPanel/PreviewMargin/PreviewVBox/ConfirmButtonWrapper/ConfirmAbilityButton" to="." method="_on_confirm_button_pressed"]
